src/objects/NC_Item__c.object
<CustomObject>
    <fields>
        <fullName>Audit_Type__c</fullName>
        <label>NC Item Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consequence_Management__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consequence Management</label>
        <referenceTo>SPE_ConsequenceManagement__c</referenceTo>
        <relationshipLabel>NC Items</relationshipLabel>
        <relationshipName>NC_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NC_Item_No__c</fullName>
        <label>NC Item No</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NC_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NC Item</label>
        <referenceTo>SPE_KPIDefinition__c</referenceTo>
        <relationshipLabel>NC Items</relationshipLabel>
        <relationshipName>NC_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Preferred_Month__c</fullName>
        <label>Preferred Month</label>
        <picklist>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preferred_Year__c</fullName>
        <label>Preferred Year</label>
        <picklist>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>NC Item</label>
    <nameField>
        <displayFormat>NC-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NC Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>